applied overall fix ups, applied alignment adjustments to about page

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -98,13 +98,6 @@ main {
     background-color: bisque;
 }
 
-.it-me img {
-    max-width: 340px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 30px;
-}
-
 @media screen and (min-width: 800px)  {
 
     .about-component {
@@ -122,6 +115,13 @@ main {
         display: flex;
         justify-content: center;
     }
+
+    .it-me img {
+        max-width: 340px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 30px;
+    }
 }
 
 
@@ -132,11 +132,19 @@ main {
             }
 
             .about {
-                padding-top: 100px;
+                padding: 40px;
                 display: flex;
                 justify-content: center;
             }
-}
+
+            .it-me img {
+                max-width: 300px;
+                margin-left: auto;
+                margin-right: auto;
+                display: flex;
+                justify-content: center;
+            }
+        }
 
 
 /* subs form */
@@ -223,6 +231,8 @@ main {
     padding: 5px
 }
 
+
+
 @media screen and (min-width: 600px)  {
 
     .star-logo img {
@@ -293,6 +303,15 @@ main {
         .photo-gallery {
             grid-template-columns: 1fr 1fr 1fr 1fr;
         }
+    }
+
+    .flatlay-component {
+        max-width: 1100px;
+        margin-left: auto;
+        margin-right: auto;
+    
+        padding: 30px;
+        padding-bottom: 60px;
     }
     
     @media screen and (min-width: 600px)  {
